<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Nombre"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/nombre_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/ingresa_nombre"
                    android:inputType="textPersonName"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Apellido"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/apellido_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/Ingresa_apellido"
                    android:inputType="textPersonName"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Escuela"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/escuela_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/Ingresa_escuela"
                    android:inputType="textPersonName"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Edad"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/edad_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/Ingresa_Edad"
                    android:inputType="number"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Estatura"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/estatura_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/Ingresa_estatura"
                    android:inputType="numberDecimal"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="me_masculino"
                    android:text="@string/Masculino"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="me_femenino"
                    android:text="@string/Femenino"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button5"
                    android:layout_width="117dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="calcular"
                    android:text="@string/Calcular"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="borrar"
                    android:text="@string/Borrar"
                    android:textSize="24sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>